fixed alignment

--- a/index.css
+++ b/index.css
@@ -1,9 +1,11 @@
 * {
-
-    text-align: center !important;
+    max-width: 800px;
+    margin: auto;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
-
+body {
+    background-color: rgb(255, 226, 241);
+}
 ul {
     
     border: 5px solid rgb(113, 255, 231);
@@ -21,13 +23,17 @@ h1 {
     border-right: 40px solid rgb(208, 255, 80) !important;
     border: 5px solid rgb(208, 255, 80);
 }
+
+h3 {
+    margin: 20px;
+    text-align: center;
+}
 #content {
     display: block;
     max-width: 800px;
     border: 5px solid darkred;
     background-color:  crimson ;
     margin: 20px auto;
-    max-width: 800px;
     padding: 40px;
     color:aliceblue;
     
